--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-!/src/main/resources/application-prod.yml
+/src/main/resources/application-prod.yml
 
 ### STS ###
 .apt_generated
